test/compile_errors/err_keyword_as_var_where.w
//! expect-check-fail: expected identifier
let where = 42
fn main:
    let x = 1
